# Extended_kalman_filter

./: .gitignore  README.md
src/box_mover/: package.xml  setup.cfg  setup.py
src/box_mover/box_mover/: move_box.py
src/box_mover/config/: param.yaml
src/box_mover/launch/: satellite_runner.launch.py
src/box_mover/models/: box.sdf
src/box_mover/worlds/: space.world
src/camera_description/: CMakeLists.txt  package.xml
src/camera_description/urdf/: camera_model.sdf  camera_model.urdf  rs_l515_only_hr.urdf.xacro
src/satellite_bringup/: package.xml  setup.cfg  setup.py
src/satellite_bringup/launch/: satellite_bringup.launch.py
src/satellite_description/: CMakeLists.txt  package.xml
src/satellite_description/markers/: apriltag_36_11_00.dae
src/satellite_description/meshes/: Cube_DekoPurposes.stl  Cube_Deko_Features.stl
src/satellite_description/rviz/: sat.rviz
src/satellite_description/urdf/: sat.sdf  satellite.urdf.xacro
src/satellite_description/world/: satworld.sdf
src/satellite_mov_cpp/: CMakeLists.txt  package.xml
src/satellite_mov_cpp/include/satellite_mov_cpp/: velocity_subscriber.hpp
src/satellite_mov_cpp/src/: main.cpp  velocity_reader.cpp  velocity_subscriber.cpp
src/satellite_mover/: package.xml  setup.cfg  setup.py
src/satellite_mover/config/: ekf_config.yaml  ekf_config_visO.yaml  param.yaml
src/satellite_mover/launch/: camera_model.launch.py  satellite_mover.launch.py
src/satellite_mover/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/satellite_mover/launch/log/: latest_build
src/satellite_mover/satellite_mover/: OdometryNoiseAdder.py  VisualOdometry_publisher.py  dummy_array_publisher.py  move_satellite.py  move_satellite_square.py  odom_plotter.py  sate_pose_ekf_plot.py
src/satellite_mover/world/: microgravity_world.xml
