<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>satellite_mover</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="skaveendya27@gmail.com">supuni</maintainer>
  <license>TODO: License declaration</license>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>robot_localization</depend>
  <depend>python3-numpy</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>satellite_description</exec_depend>
  <exec_depend>camera_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
